--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
-    "core-js": "^3.26.1"
+    "axios": "^1.2.2",
+    "core-js": "^3.26.1",
+    "swiper": "^8.4.5"
   }
 }
