--- a/.eslintrc
+++ b/.eslintrc
@@ -1,14 +1,12 @@
 {
   "parser": "@babel/eslint-parser",
-  "extends": [
-    "eslint:recommended"
-  ],
+  "extends": ["eslint:recommended"],
   "env": {
     "browser": true,
     "node": true
   },
   "parserOptions": {
-    "ecmaVersion": 8,
+    "ecmaVersion": "latest",
     "sourceType": "module",
     "requireConfigFile": false
   },
